# Cookie_thread

./: .gitignore  README.md  west.yml
apps/diag_blinky/: CMakeLists.txt  prj.conf
apps/diag_blinky/src/: main.c
apps/diag_blinky_ot/: CMakeLists.txt  prj.conf
apps/diag_blinky_ot/src/: main.c
apps/diag_init_trace/: CMakeLists.txt  prj.conf  sysbuild.conf
apps/diag_init_trace/boards/: nrf52840dongle_nrf52840.overlay
apps/diag_init_trace/src/: main.c
apps/gateway/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
apps/gateway/boards/: cookie_nrf_v200.conf  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/gateway/src/: coap_server.c  coap_server.h  main.c  usb_print.c  usb_print.h
apps/sensor_node/: CMakeLists.txt  Kconfig  prj.conf  sysbuild.conf
apps/sensor_node/boards/: cookie_nrf_v200.conf  nrf52840dongle_nrf52840.conf  nrf52840dongle_nrf52840.overlay
apps/sensor_node/overlays/: profile_auto.conf  profile_sed.conf
apps/sensor_node/src/: main.c  node_loop.c  node_loop.h  sed_loop.c  sed_loop.h  thread_setup.c  thread_setup.h
boards/cei/cookie_nrf_v200/: Kconfig.cookie_nrf_v200  board.cmake  board.yml  cookie_nrf_v200-pinctrl.dtsi  cookie_nrf_v200.dts  cookie_nrf_v200.yaml  cookie_nrf_v200_defconfig
dts/bindings/sensor/: invensense,icm20648.yaml
libs/cookie_power/: CMakeLists.txt  Kconfig
libs/cookie_power/src/: power.c
libs/cookie_power/zephyr/: module.yml
libs/cookie_proto/: CMakeLists.txt  Kconfig
libs/cookie_sensors/: CMakeLists.txt  Kconfig
scripts/: build_all.py
tools/pc_tool/: README.md  pyproject.toml
tools/pc_tool/cookie_pctool/: __init__.py  cli.py  export.py  frames.py  source.py  state.py  stub.py  tui.py
tools/pc_tool/tests/: test_export_smoke.py  test_frames.py  test_state.py
zephyr/: module.yml
(+12 files in other folders)
