[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "cookie-pctool"
version = "0.1.0"
description = "Live monitor and post-mortem exporter for Cookie Thread mesh demonstrator"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Dmytro Kysil" }]
license = { text = "Apache-2.0" }
dependencies = [
    "rich>=13.7",
    "plotly>=5.20",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
]

[project.scripts]
cookie-pctool = "cookie_pctool.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cookie_pctool*"]
